libplrt_sources = [
    'plrt-error.c',
    'plrt-memory.c',
    'plrt-file.c',
    'plrt-string.c',
    'plrt-token.c',
    'plrt-plml.c',
    'plrt-posix.c'
]

libplrt = shared_library('plrt',
                        libplrt_sources,
                        include_directories: inc,
                        install: true)
